# ted-agent

./: .dockerignore  .gitignore  AGENT-SETUP.md  API-WORKING.md  Dockerfile  QUICKSTART.md  README.md  SETUP-NOTES.md  check_response.py  docker-compose.yml  pyproject.toml  start-dev.sh  start-frontend.sh  test_api.py  test_services.py  test_ted_search.py
backend/: README.md  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: SPARQL_IMPLEMENTATION.md  __init__.py  queries.md  sparql_queries.md  ted_agent.py  tool_selection_guide.md  tools.py
backend/app/api/routes/: agentos.py  (+4 more)
backend/app/core/: __init__.py  config.py  logging.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  ollama_client.py  query_builder.py  supabase_client.py  ted_client.py
docs/: agent-design.md  api-specification.md  architecture.md  database-schema.md  deployment.md  query-builder.md  requirements.md  saved-items-feature.md  saved-items-quick-start.md  tech-stack.md  ted-api-integration.md  workspace-panel-spec.md
frontend/: Dockerfile  README.md  SETUP.md  app.js  index.html  package.json  pnpm-lock.yaml  styles.css  tailwind.config.ts
frontend/agent-ui/: tailwind.config.ts
frontend/agent-ui/src/: store.ts
frontend/src/: store.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: useAIStreamHandler.tsx  useChatActions.ts  useGeolocation.tsx  useSessionLoader.tsx
frontend/src/lib/: constructEndpointUrl.ts  utils.ts
frontend/src/types/: workspace.ts
uptime_monitor/: Dockerfile  monitor.py
(+27 files in other folders)
